WIP 1.20.3 (using 1.20.3-pre3)
Builds and runs.

Replaced usages of Guava types where possible